--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   font-family: "VT323", monospace;
   height: 100vh;
   display: flex;
-  background-image: url("/assets/background.png");
+  background-image: url("./assets/background.png");
   background-size: cover;
   background-position: bottom;
   overflow-x: hidden;
@@ -58,7 +58,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url(/assets/flush.png);
+  background-image: url(./assets/flush.png);
   background-repeat: no-repeat;
   image-rendering: pixelated;
   background-size: 20%;
@@ -106,7 +106,7 @@ body {
 }
 
 .btn:hover::after {
-  background-image: url(/assets/finger.png);
+  background-image: url(./assets/finger.png);
 }
 
 .action-btns {
@@ -194,22 +194,22 @@ body {
 }
 
 .sprite-wrapper.heart:after {
-  background-image: url(/assets/bubbles/heart.png);
+  background-image: url(./assets/bubbles/heart.png);
 }
 .sprite-wrapper.cool:after {
-  background-image: url(/assets/bubbles/cool.png);
+  background-image: url(./assets/bubbles/cool.png);
 }
 .sprite-wrapper.stars:after {
-  background-image: url(/assets/bubbles/stars.png);
+  background-image: url(./assets/bubbles/stars.png);
 }
 .sprite-wrapper.quiet:after {
-  background-image: url(/assets/bubbles/quiet.png);
+  background-image: url(./assets/bubbles/quiet.png);
 }
 .sprite-wrapper.angry:after {
-  background-image: url(/assets/bubbles/angry.png);
+  background-image: url(./assets/bubbles/angry.png);
 }
 .sprite-wrapper.ko:after {
-  background-image: url(/assets/bubbles/ko.png);
+  background-image: url(./assets/bubbles/ko.png);
   width: 80px;
   top: -50px;
   left: 20px;
