Fix responsive button

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,12 @@ body {
   transform: scale(1.5);
 }
 
+@media (max-width: 700px) {
+  #btn-container {
+    top: 65%;
+
+  }
+}
 
 .btn {
   position: relative;
