--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,9 @@ body {
 
 @media (max-width: 700px) {
   #btn-container {
-    top: 65%;
-
+    top: 62%;
+    width: 94%;
+    z-index: 50;
   }
 }
 
